# embedded

./: .gdbinit  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/boards/: CMakeLists.txt
src/boards/host/: CMakeLists.txt  main.c
src/boards/pico/: CMakeLists.txt  main.c
src/drivers/: CMakeLists.txt  uart.c  uart.h
src/shared/: CMakeLists.txt  core.c  core.h
tests/: CMakeLists.txt  test_shared.c
